interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
body,
.modal-backdrop {
    background-color: black;
    color: #EBEBEB
}

nav {
    background-color: #444444 !important;
    border: 0 !important;
    border-bottom: 1px solid black !important;
}

nav .btn {
    background-color: #E4E4E4;
    border-color: #5D5D5D !important;
}

@media (max-width: 767px) {
    nav {
        background-color: black !important;
    }
}

a, a:active, a:hover, a:focus,
.hover-button.glyphicon-play,
.hover-button.glyphicon-stop,
.dropdown-menu>li>a,
legend,
#modal-options legend label,
#modal-options legend a,
#modal-item-files .item-files-table .progress small,
#modal-options .options-switch label,
#modal-options #options-orphans .process-all-orphaned,
.text-muted {
    color: #EBEBEB;
}

.dropdown-menu>li>a:hover,
.dropdown-menu>li>a:focus,
.navbar-inverse .navbar-nav .open .dropdown-menu>li>a:hover,
.navbar-inverse .navbar-nav .open .dropdown-menu>li>a:focus,
#feedback-slider {
    background-color: #555555;
    color: white !important;
}

.main-restarting,
.main-filedrop,
.nav-tabs>li>a {
    color: white !important;
}

.hover-button {
    opacity: 0.7;
}

.progress {
    background-color: #DADADA;
}

.main-notification-box {
    background-color: #727272;
    border-color: #252525 !important;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
}

.container,
.modal-body,
.modal-footer {
    background-color: #727272;
}

.dropdown-menu,
.navbar-collapse.in .dropdown-menu {
    background-color: #666;
}

.navbar-collapse.in .dropdown-menu {
    border: none;
}

.max-speed-input-clear,
.max-speed-input-clear:hover,
.nav-tabs>li>a:hover {
    color: black;
}

.nav-tabs>li.active>a,
.nav-tabs>li.active>a:focus,
.nav-tabs>li.active>a:hover,
.nav-tabs>li>a:hover {
    background-color: #ddd;
    color: #555 !important;
    box-shadow: 0px -1px 1px 1px rgba(0,0,0,0.15);
}

.processing-download > div {
    background-color: #EBEBEB;
}

.table-striped>tbody>tr:nth-child(odd)>td,
.table>tbody>tr:nth-child(odd)>td,
.table>tbody>tr:nth-child(even).files-sortable>td .progress,
.multioperations-selector,
.pagination li.active span,
.pagination li span:hover,
.dropdown-menu .divider,
.history-queue-swicher .badge {
    background-color: #444444;
    color: #EBEBEB;
}

.table>tbody>tr:nth-child(even).files-sortable>td .progress .progress-bar .fileDetails {
    color: #000000;
}

.table>tbody>tr:nth-child(odd).files-sortable>td .progress .progress-bar .fileDetails {
    color: #000000;	
}

.table-striped>tbody>tr:nth-child(even)>td,
.table>tbody>tr:nth-child(even)>td,
.table>tbody>tr:nth-child(odd).files-sortable>td .progress,
.table th,
.pagination li span,
.pagination>.disabled>span,
.pagination>.disabled>span:hover,
.search-box input,
input,
input.form-control,
.input-group-addon,
select.form-control,
.main-content .btn-default,
.modal-body .btn-default,
.modal-footer .btn-default,
#modal-options .options-function-box .input-group-addon {
    background-color: #555555;
    color: #EBEBEB;
}

.table,
tr td,
tbody>tr>td:last-child,
tbody>tr>td:first-child,
tbody>tr:last-child td,
.table-messages .table-messages-remove,
.multioperations-selector,
.pagination li span,
.pagination li a,
.search-box input,
input,
input.form-control,
.input-group-addon,
select.form-control,
#modal-options .table-server-connections th,
.main-content .btn-default,
.modal-body .btn-default,
.modal-footer .btn-default,
.queue .table-active-sorting {
    border-color: #252525 !important;
}


.history-failed-download td.status,
.retry-buttontext,
.retry-button, .retry-button-inactive,
.history-options-show-failed,
.queue-error-info,
.options-bad-status {
    color: #F95151 !important;
}

.ui-sortable-helper td {
    background-color: #555555 !important;
}

tbody .caret {
    border-top-color: #EBEBEB !important;
}

.info-container,
#modal-options .options-status-box small,
#modal-options #options-status small,
#modal-options .tab-content h4 {
    color: #D6D6D6;
}

td.name .name-ratings span,
.navbar-nav .open .dropdown-menu>li>a,
.dropdown-header,
#modal-help small,
pre {
    color: #EBEBEB !important;
    opacity: 1 !important;
}

legend,
hr {
    border-color: #C6C6C6 !important;
}

.ui-slider .ui-slider-handle {
    background-color: #969696;
    border-color: #969696
}

#modal-help table td,
#modal-help table {
    background-color: transparent;
}

#modal-item-files .item-files-table td {
    border-bottom: none !important;
}

.history-queue-swicher .nav-tabs>li>a,
.history-queue-swicher .nav-tabs>li.active>a  {
    border-bottom: none;
    margin-bottom: 1px;
}

.queue-item .dropdown-menu:after,
.history-item .dropdown-menu:after,
.info-container-box-sorting .dropdown-menu:after {
    border-bottom-color: #666;
}

.container-compact .progress,
.container-compact .queue .progress-bar {
    box-shadow: inset 1px 0px 1px rgba(0, 0, 0, 1);
}

/* Placeholders - Will not work if grouped! */
::-webkit-input-placeholder {
   color: #EBEBEB !important;
}

::-moz-placeholder {
   color: #EBEBEB !important;
   opacity: 1 !important;
}

:-ms-input-placeholder {
   color: #EBEBEB !important;
}

